fix text overflow in cards

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -154,7 +154,7 @@
 
 /* ToolCard Component */
 .tool_card {
-  @apply flex-1 break-inside-avoid rounded-lg border border-gray-300 bg-white/20 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter /* md:w-[300px] lg:w-[360px] */ w-full h-fit /* justify-stretch */;
+  @apply flex-1 break-inside-avoid rounded-lg border border-gray-300 bg-white/20 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter /* md:w-[300px] lg:w-[360px] */ w-full h-fit /* justify-stretch */ overflow-hidden;
 }
 
 .flex-center {
